exports[`test renders a button if there is a field guide 1`] = `
<View>
  <View
    style={undefined}>
    <TouchableOpacity
      activeOpacity={0.5}
      onPress={[Function]}
      style={
        Array [
          undefined,
          undefined,
        ]
      }>
      <Image
        source={1}
        style={undefined} />
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            undefined,
            Array [
              undefined,
            ],
          ]
        }>
        Yes
      </Text>
    </TouchableOpacity>
    <TouchableOpacity
      activeOpacity={0.5}
      onPress={[Function]}
      style={undefined}>
      <Text
        accessible={true}
        allowFontScaling={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": undefined,
              "fontFamily": "FontAwesome",
              "fontSize": 12,
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            undefined,
          ]
        }>
        
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            undefined,
            Array [
              undefined,
            ],
          ]
        }>
        Field Guide
      </Text>
    </TouchableOpacity>
    <TouchableOpacity
      activeOpacity={0.5}
      onPress={[Function]}
      style={
        Array [
          undefined,
          undefined,
        ]
      }>
      <Image
        source={1}
        style={undefined} />
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            undefined,
            Array [
              undefined,
            ],
          ]
        }>
        No
      </Text>
    </TouchableOpacity>
  </View>
</View>
`;

exports[`test renders correctly and with no button if no field guide 1`] = `
<View>
  <View
    style={undefined}>
    <TouchableOpacity
      activeOpacity={0.5}
      onPress={[Function]}
      style={
        Array [
          undefined,
          undefined,
        ]
      }>
      <Image
        source={1}
        style={undefined} />
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            undefined,
            Array [
              undefined,
            ],
          ]
        }>
        Yes
      </Text>
    </TouchableOpacity>
    <TouchableOpacity
      activeOpacity={0.5}
      onPress={[Function]}
      style={
        Array [
          undefined,
          undefined,
        ]
      }>
      <Image
        source={1}
        style={undefined} />
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            undefined,
            Array [
              undefined,
            ],
          ]
        }>
        No
      </Text>
    </TouchableOpacity>
  </View>
</View>
`;
